# coast_input_simulation

./: .gitignore  BUILD.gn  CMakeLists.txt  README  build.sh  give_user_uinput_permissions.sh  input_sim.h  input_sim_macros.h  input_sim_test.cc
linux/: input_sim_linux.cc
win/: input_sim_win.cc
